# nasiko1

./: .nasiko-local.env.example  COMPLIANCE_REPORT.md  Dockerfile  Dockerfile (1)  Dockerfile (10)  Dockerfile (5)  Dockerfile.worker  Makefile  PROJECT_CONTEXT.md  README.md  VIDEO_DEMO_GUIDE.md  __init__ (15).py  __init__ (18).py  __init__ (19).py  __init__ (20).py  __init__ (21).py  __init__ (22).py  __init__ (24).py  __init__ (25).py  __init__ (26).py  __init__ (27).py  __init__ (28).py  __init__ (29).py  __init__.py  __main__ (12).py  __main__ (7).py  __main__.py  agent_builder.py  chat.py  conftest.py  deploy.py  deployment-guide.md  detector.py  docker-compose (3).yml  docker-compose.local.yml  docker-compose.yml  exceptions.py  generator.py  ingest.py  kong.py  (+24 more)
.github/workflows/: ci.yml
agent-gateway/chat-history-service/: main.py
agent-gateway/registry/: registry.py
app/: main.py
app/adapters/: __init__.py  base_adapter.py  nanda_adapter.py
app/api/: auth.py  types.py
app/entity/: entity.py  n8n_entity.py  user_github_credentials_entity.py
app/repository/: agent_operations_repository.py  base_repository.py  chat_repository.py  github_repository.py  n8n_repository.py  registry_repository.py  repository.py  upload_status_repository.py
app/service/: agent_operations_service.py  agent_update_service.py  agent_upload_service.py  agent_upload_tracking_service.py  agentcard_service.py  chat_history_service.py  github_service.py  k8s_service.py  n8n_service.py  nanda_service.py  observability_service.py  orchestration_service.py  redis_search_service.py  service.py
cli/: __init__.py  main.py
cli/auth/: auth_commands.py  auth_manager.py
cli/commands/: access.py  chat_history.py  chat_send.py  github.py  n8n.py  observability.py  registry.py  search.py  upload_agent.py  user_management.py
cli/core/: api_client.py  settings.py
cli/groups/: __init__.py  access_group.py  (+9 more)
docs/: getting-started.md
orchestrator/: agent_builder.py  config.py  docker_utils.py  instrumentation_injector.py  redis_stream_listener.py  registry_manager.py  requirements.txt  superuser_manager.py
worker/: __init__.py  k8s_build_worker.py
(+86 files in other folders)
