[project]
name = "arithmic-nasiko"
version = "0.0.1"
description = "nasiko registry something"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.9.1",
    "arize-phoenix>=12.0.0",
    "arize-phoenix-otel>=0.6.0",
    "astor>=0.8.1",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langtrace-python-sdk>=3.8.21",
    "nltk>=3.9.1",
    "motor==3.5.1",
    "numexpr>=2.11.0",
    "openpyxl>=3.1.5",
    "openinference-instrumentation-langchain>=0.1.57",
    "openinference-instrumentation-openai>=0.1.40",
    "opentelemetry-distro>=0.57b0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-instrumentation-asgi>=0.57b0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-langchain>=0.45.6",
    "opentelemetry-instrumentation-openai>=0.45.6",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.0.250703",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "pydantic-settings>=2.10.1",
    "soupsieve>=2.7",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
    "docx>=0.2.4",
    "pymongo==4.8.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "anthropic>=0.64.0",
    "google-generativeai>=0.8.5",
    "crewai>=0.175.0",
    "autogen>=0.9.9",
    "django>=5.2.5",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "aiohttp>=3.12.15",
    "boto3>=1.38.0",
    "pinecone-client>=6.0.0",
    "chromadb>=1.0.20",
    "redis>=6.4.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "python-multipart>=0.0.20",
    "typer>=0.16.1",
    "rich>=14.1.0",
    "a2a>=0.44",
    "a2a-server>=0.5.4",
    "elasticsearch>=8.0.0,<9.0.0",
    "pydo>=0.18.0",
    "kubernetes>=33.1.0",
    "pyyaml>=6.0.2",
    "semver>=3.0.4",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "black==26.3.1",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[tool.black]
target-version = ['py312']
